Fix alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -37,7 +37,7 @@ body {
     background-color: #fff;
     border-radius: 30px;
     cursor: pointer;
-    padding: 10px;
+    padding: 0px;
 }
 
 h3 {
